PC-123: add styles to truncate long category names that overflow and fix incorrect border width

--- a/app/assets/stylesheets/application/buttons.scss
+++ b/app/assets/stylesheets/application/buttons.scss
@@ -1,6 +1,5 @@
 // Base styles
 .btn {
-  border-width: 1.3px;
   // styles for variant="primary"
   &-primary {
     color: white !important;
