--- a/app/assets/stylesheets/application/variables.scss
+++ b/app/assets/stylesheets/application/variables.scss
@@ -58,7 +58,7 @@ $line-height-lg: 1.6;
 
 // Button styles
 $border-radius: 8px;
-$border-width: 1.3px;
+
 // Enable RFS
 $enable-responsive-font-sizes: true !default;
 
